[package]
name = "rwlock-trace"
version = "0.1.0"
authors = ["Adam-Gleave <adamg108@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.56"
log = "0.4.14"
tokio = { version = "1.5.0", features = ["sync"] }
